# esp-crypto

./: .cppcheck-suppressions  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  idf_component.yml  library.json  library.properties
.github/workflows/: ci.yml  lint.yml
examples/advanced_primitives/: advanced_primitives.ino
examples/basic_crypto/: basic_crypto.ino
examples/basic_hash_and_aes/: basic_hash_and_aes.ino
examples/bench_crypto/: bench_crypto.ino
examples/esp_idf_core_smoke/: CMakeLists.txt
examples/esp_idf_core_smoke/main/: main.cpp
examples/jwks_rotation/: jwks_rotation.ino
examples/jwt_and_password/: jwt_and_password.ino
examples/keys_and_streaming/: keys_and_streaming.ino
src/: ESPCrypto.h
src/esp_crypto/: asymmetric.h  crypto_asymmetric.cpp  crypto_core.cpp  crypto_hash_kdf.cpp  crypto_jwt.cpp  crypto_storage.cpp  crypto_symmetric.cpp  device_key.h  ed25519.h  esp_crypto.cpp  esp_crypto.h  hash.h  jwt.h  kdf.h  keystore.h  password.h  policy.h  runtime.h  stream.h  symmetric.h  types.h
src/esp_crypto/internal/: crypto_internal.h
test/: CMakeLists.txt  host_api_smoke.cpp
test/test_esp_crypto/: test_esp_crypto.cpp
